--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
     "unbuild": "^3.5.0",
     "vite": "^7.0.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "packageManager": "pnpm@8.10.0+sha1.77d568bacf41eeefd6695a7087c1282433955b5c"
 }
