--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   "homepage": "https://github.com/memorylovers/vite-plugin-auto-line-ending#readme",
   "funding": "https://github.com/sponsors/memory-lovers",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=22.0.0"
   },
   "peerDependencies": {
-    "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
+    "vite": "^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.12",
