fix: add skipLibCheck to resolve rollup/parseAst type error
- Add skipLibCheck: true to tsconfig.json to skip type checking of node_modules
- Fix JSON syntax by removing trailing commas
- This resolves the lint job failure caused by Vite type definitions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
     "esModuleInterop": true,
     "strict": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "types": [
       "node",
       "vitest/globals"
-    ],
+    ]
   },
   "include": [
     "src",
     "tests",
-    "package.json",
+    "package.json"
   ]
 }
